--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "katex": "^0.12.0",
     "sirv-cli": "^1.0.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "stickyfill": "^1.1.1-strict"
+    "stickyfill": "^1.1.1-strict",
+    "svelte-scroll": "^0.0.0"
   }
 }
